--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
-    <ul class="js-list">
-
-    </ul>
+    <form class="form-input">
+      <input class="input" type="text" name="input"> 
+    </form>
+    <ul class="js-list list"></ul>
+    <button class="js-btn btn" name="load-btn" type="button">Load more</button>
   </body>
 </html>
