--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,12 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <!-- <include src="./partials/example.html"></include> -->
     <form class="form-input">
-      <input class="input" type="text" name="input"> 
+      <input class="input" type="text" name="input" />
     </form>
     <ul class="js-list list"></ul>
     <button class="js-btn btn" name="load-btn" type="button">Load more</button>
+    <div class="backdrop">
+      <div class="module"></div>
+    </div>
   </body>
 </html>
