--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,12 @@
       <input class="input" type="text" name="input" />
     </form>
     <ul class="js-list list"></ul>
-    <button class="js-btn btn" name="load-btn" type="button">Load more</button>
+    <!-- <button class="js-btn btn" name="load-btn" type="button">Load more</button> -->
+    <div class="pugination-wrapper">
+      <button class="pagination-btn js-back" type="button">Back</button>
+      <ul class="pugination-list"></ul>
+      <button class="pagination-btn js-forward" type="button">Forward</button>
+    </div>
     <div class="backdrop">
       <div class="module"></div>
     </div>
